Popover - Popover inside popover trigger z-index fix

--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -42,7 +42,7 @@ $grey-05: #f4f4f4;
     }
   }
   &:not(.ewc-popover--hide) {
-    .ewc-popover__trigger {
+    > .ewc-popover__trigger {
       z-index: 110;
     }
   }
